--- a/Start Node/ChatingWeb/views/chat.pug
+++ b/Start Node/ChatingWeb/views/chat.pug
@@ -6,7 +6,7 @@ html
     title= 'Chat'
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css", integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous")
-    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js", integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous")  // 위 link와 이 script는 부트스트랩 연결
+    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js", integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous")
     script(src='/socket.io/socket.io.js')
     script(src='//code.jquery.com/jquery-1.11.1.js')
   body
@@ -16,24 +16,37 @@ html
       form#chat
         input#name.form-contorl(type='text')
         input#message.form-contorl(type='text')
-        button.btn.btn-primary(type='submit')
+        button.btn.btn-primary(type='submit') 전송
       #box.box
-			
+	  
     script.
       var socket = io(); 
-
+	  
       $('#chat').on('submit', function(e){   // 전송 버튼을 누를 때 - 1
       socket.emit('send message', $('#name').val(), $('#message').val());
       $('#message').val('');
       $('#message').focus();
       e.preventDefault();
       });
-			
-      socket.on('create name', function(name){  // 이름 셋팅 - 2
+	  
+      socket.on('create name', function(name){   // 이름 셋팅 - 2
       $('#name').val(name);
       });
-
-      socket.on('receive message', function(msg){   // 메세지를 받았을 때 - 3
+	  
+      socket.on('change name', function(oldname, name){   // 닉네임을 바꿨을 때 - 3
+      $('#name').val(name);
+      $('#chatLog').append('<알림> ' + oldname + '님이 ' + name +'님으로 닉네임을 변경했습니다.\n');
+      });
+	  
+      socket.on('receive message', function(msg){   // 메세지를 받았을 때 - 4
       $('#chatLog').append(msg+'\n');
       $('#chatLog').scrollTop($('#chatLog')[0].scrollHeight);
+      });
+	  
+      socket.on('new_disconnect', function(name){  // 채팅방 접속이 끊어졌을 때 - 5
+      $('#chatLog').append('<알림> ' + name + '님이 채팅창을 떠났습니다.\n');
+      });
+	  
+      socket.on('new_connect', function(name){  // 채팅방에 접속했을 때 - 6
+      $('#chatLog').append('<알림> ' + name + '님이 채팅창에 접속했습니다.\n');
       });
